Code cleanup based on comments from Vincent on pull request